--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <version>6.8</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency> <!-- for extracting json as pojo -->
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.2</version>
+        </dependency>
     </dependencies>
 
     <build>
