add default testng.xml

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,18 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
+
+            <plugin> <!-- add this plugin to run testng suite xml file when running [mvn clean test]-->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile> <!-- the file name to be run by mvn -->
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
